# nautilus-adapter-gmocoin

./: .gitignore  Cargo.toml  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag-and-release.yml
examples/: full_trading_node.py
nautilus_gmocoin/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py  symbol_utils.py  types.py
src/: error.rs  lib.rs  rate_limit.rs
src/client/: data_client.rs  execution_client.rs  rest.rs
src/model/: account.rs  market_data.rs  mod.rs  order.rs  orderbook.rs
tests/: conftest.py  test_bar_mapping.py  test_config.py  test_constants.py  test_rest_private.py  test_rest_public.py  test_rust_models.py  test_symbol_utils.py  test_types.py
tests/cassettes/: TestPrivateRestApi.test_get_assets.json  TestPrivateRestApi.test_get_margin.json  TestPrivateRestApi.test_ws_auth.json  TestPublicRestApi.test_get_klines.json  TestPublicRestApi.test_get_orderbooks.json  TestPublicRestApi.test_get_symbols.json  TestPublicRestApi.test_get_ticker.json  TestPublicRestApi.test_get_trades.json
