[package]
name = "nautilus-gmocoin"
version = "0.1.0"
edition = "2021"

[lib]
name = "_nautilus_gmocoin"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls"] }
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
